pkgdata_DATA = resources.xml

icondir = $(datadir)/icons
icon_DATA = icon.png

flash2dir = $(pkgdatadir)/cars/flash2
flash2_DATA = cars/flash2/surface.tga cars/flash2/surface3d.tga 

jeepdir = $(pkgdatadir)/cars/jeep
jeep_DATA = cars/jeep/surface.tga cars/jeep/surface3d.tga

vwdir = $(pkgdatadir)/cars/vw
vw_DATA = cars/vw/surface.tga cars/vw/surface3d.tga 

z3dir = $(pkgdatadir)/cars/z3
z3_DATA = cars/z3/surface.tga cars/z3/surface3d.tga 

carsdir = $(pkgdatadir)/cars
cars_DATA = cars/dust.tga

fontsdir = $(pkgdatadir)/fonts
fonts_DATA =  fonts/normal_22_white.tga fonts/normal_22_gray.tga fonts/lcd_13_green.tga fonts/normal_8_white.tga \
	      fonts/normal_11_white.tga fonts/normal_14_white.tga 

goodydir = $(pkgdatadir)/goody
goody_DATA = goody/turbo.tga goody/fogbomb.tga goody/bullets.tga goody/life.tga goody/money.tga

guidir = $(pkgdatadir)/gui
gui_DATA = gui/button.tga gui/progressbar.tga gui/border1.tga gui/border2.tga \
	    gui/border3.tga gui/border4.tga gui/arrow_b.tga gui/arrow_l.tga gui/arrow_r.tga \
	    gui/edge1.tga gui/arrow_t.tga gui/edge2.tga gui/edge3.tga gui/edge4.tga \
	    gui/loading.tga 

menudir = $(pkgdatadir)/menu
menu_DATA = menu/bg.tga menu/bar.tga menu/cursorani.tga 

miscdir = $(pkgdatadir)/misc
misc_DATA = misc/dust.tga misc/checkflag.tga misc/gunfire.tga misc/cross.tga misc/fog.tga misc/hitpoint.tga \
	    misc/carfire.tga misc/light.tga misc/caution.tga misc/info.tga misc/verticalbar.tga

paneldir = $(pkgdatadir)/panel
panel_DATA = panel/death.tga panel/turbo.tga panel/label.tga panel/infoview.tga panel/button.tga \
	    panel/speed.tga panel/turbolabel.tga panel/life.tga 

soundsdir = $(pkgdatadir)/sounds
sounds_DATA = sounds/menu.wav sounds/shot.wav sounds/dog.wav sounds/goody_money.wav sounds/goody_life.wav \
	      sounds/selector.wav sounds/crash.wav sounds/fogbomb.wav sounds/fire.wav sounds/shoot.wav \
	      sounds/goody.wav sounds/goody_turbo.wav sounds/engine.wav sounds/goody_fogbomb.wav \
	      sounds/background01.wav sounds/carhorn.wav sounds/light.wav sounds/goody_bullets.wav \
	      sounds/slide.wav

Downtowndir = $(pkgdatadir)/tracks/Downtown
Downtown_DATA = tracks/Downtown/vmap.tga tracks/Downtown/config.tck tracks/Downtown/bridge.tga tracks/Downtown/fmap.tga tracks/Downtown/thumb.tga 

Loopsdir = $(pkgdatadir)/tracks/Loops
Loops_DATA = tracks/Loops/vmap.tga tracks/Loops/config.tck tracks/Loops/bridge.tga tracks/Loops/fmap.tga tracks/Loops/thumb.tga 

Moondir = $(pkgdatadir)/tracks/Moon
Moon_DATA = tracks/Moon/vmap.tga tracks/Moon/config.tck tracks/Moon/bridge.tga tracks/Moon/fmap.tga tracks/Moon/thumb.tga 

Rallydir = $(pkgdatadir)/tracks/Rally
Rally_DATA = tracks/Rally/vmap.tga tracks/Rally/config.tck tracks/Rally/fmap.tga tracks/Rally/thumb.tga 

Snakedir = $(pkgdatadir)/tracks/Snake
Snake_DATA = tracks/Snake/vmap.tga tracks/Snake/config.tck tracks/Snake/bridge.tga tracks/Snake/fmap.tga tracks/Snake/thumb.tga 

Zigzagdir = $(pkgdatadir)/tracks/Zigzag
Zigzag_DATA = tracks/Zigzag/vmap.tga tracks/Zigzag/config.tck tracks/Zigzag/bridge.tga tracks/Zigzag/fmap.tga tracks/Zigzag/thumb.tga 

Zurichdir = $(pkgdatadir)/tracks/Zurich
Zurich_DATA = tracks/Zurich/vmap.tga tracks/Zurich/config.tck tracks/Zurich/fmap.tga tracks/Zurich/thumb.tga 

Industrialdir = $(pkgdatadir)/tracks/Industrial
Industrial_DATA = tracks/Industrial/vmap.tga tracks/Industrial/bridge.tga tracks/Industrial/fmap.tga tracks/Industrial/thumb.tga tracks/Industrial/config.tck

EXTRA_DIST = $(pkgdata_DATA) $(icon_DATA) $(flash2_DATA) $(jeep_DATA) $(vw_DATA) $(z3_DATA) $(cars_DATA) $(fonts_DATA) $(goody_DATA) $(gui_DATA) $(menu_DATA) $(misc_DATA) $(panel_DATA) $(sounds_DATA) $(Downtown_DATA) $(Loops_DATA) $(Moon_DATA) $(Rally_DATA) $(Snake_DATA) $(Zigzag_DATA) $(Zurich_DATA) $(Industrial_DATA) 
