bin_PROGRAMS = trophy
trophy_SOURCES = cagoody.cpp cainfodialog.cpp camenu.h canetserver.cpp capositiontable.h casoundeffect.cpp \
		 cagoody.h cainfodialog.h camenuinput.cpp canetserver.h capositiontableview.cpp casoundeffect.h \
		 cagoodytype.h calabel.cpp camenuinput.h capanel.cpp capositiontableview.h castringlist.cpp \
		 cacartype.h caimagehueselector.cpp calabel.h camenuitem.cpp capanel.h caresources.cpp castringlist.h \
		 cacolor.h caimagehueselector.h calineedit.cpp camenuitem.h caplayer.cpp caresources.h catrack.h \
		 cacredits.cpp caimagemanipulation.cpp calineedit.h camenulabel.cpp caplayer.h cascreen.cpp catrophy.cpp \
		 cacredits.h caimagemanipulation.h caloadingscreen.cpp camenulabel.h caplayersettingsdialog.cpp cascreen.h \
		 catrophy.h cadialog.cpp caimageselector.cpp caloadingscreen.h camenuselect.cpp caplayersettingsdialog.h \
		 casignupscreen.cpp cawidget.cpp cadialog.h caimageselector.h camath.cpp camenuselect.h caplayerview.cpp \
		 casignupscreen.h cawidget.h cadustclowd.h caimageview.cpp camath.h canetclient.cpp caplayerview.h \
		 caslotselectiondialog.cpp cafogbomb.h caimageview.h camenu.cpp canetclient.h capositiontable.cpp \
		 caslotselectiondialog.h

AM_LDFLAGS = `pkg-config --libs $(CLANLIB_MODULES)`
INCLUDES = `pkg-config --cflags $(CLANLIB_MODULES)`
AM_CPPFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\"
